// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders components/color-picker/demo/allowClear.tsx correctly 1`] = `
<div
  class="g-color-picker-trigger css-var-test-id g-color-picker-css-var"
>
  <div
    class="g-color-picker-color-block"
  >
    <div
      class="g-color-picker-color-block-inner"
      style="background:rgb(22,119,255)"
    />
  </div>
</div>
`;

exports[`renders components/color-picker/demo/base.tsx correctly 1`] = `
<div
  class="g-color-picker-trigger css-var-test-id g-color-picker-css-var"
>
  <div
    class="g-color-picker-color-block"
  >
    <div
      class="g-color-picker-color-block-inner"
      style="background:rgb(22,119,255)"
    />
  </div>
</div>
`;

exports[`renders components/color-picker/demo/controlled.tsx correctly 1`] = `
<div
  class="g-space g-space-horizontal g-space-align-center g-space-gap-row-small g-space-gap-col-small css-var-test-id"
>
  <div
    class="g-space-item"
  >
    <div
      class="g-color-picker-trigger css-var-test-id g-color-picker-css-var"
    >
      <div
        class="g-color-picker-color-block"
      >
        <div
          class="g-color-picker-color-block-inner"
          style="background:rgb(22,119,255)"
        />
      </div>
    </div>
  </div>
  <div
    class="g-space-item"
  >
    <div
      class="g-color-picker-trigger css-var-test-id g-color-picker-css-var"
    >
      <div
        class="g-color-picker-color-block"
      >
        <div
          class="g-color-picker-color-block-inner"
          style="background:rgb(22,119,255)"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/color-picker/demo/disabled.tsx correctly 1`] = `
<div
  class="g-color-picker-trigger css-var-test-id g-color-picker-css-var g-color-picker-trigger-disabled"
>
  <div
    class="g-color-picker-color-block"
  >
    <div
      class="g-color-picker-color-block-inner"
      style="background:rgb(22,119,255)"
    />
  </div>
  <div
    class="g-color-picker-trigger-text"
  >
    #1677FF
  </div>
</div>
`;

exports[`renders components/color-picker/demo/disabled-alpha.tsx correctly 1`] = `
<div
  class="g-color-picker-trigger css-var-test-id g-color-picker-css-var"
>
  <div
    class="g-color-picker-color-block"
  >
    <div
      class="g-color-picker-color-block-inner"
      style="background:rgb(22,119,255)"
    />
  </div>
</div>
`;

exports[`renders components/color-picker/demo/format.tsx correctly 1`] = `
<div
  class="g-space g-space-vertical g-space-gap-row-medium g-space-gap-col-medium css-var-test-id"
  style="display:flex"
>
  <div
    class="g-space-item"
  >
    <div
      class="g-space g-space-horizontal g-space-align-center g-space-gap-row-small g-space-gap-col-small css-var-test-id"
    >
      <div
        class="g-space-item"
      >
        <div
          class="g-color-picker-trigger css-var-test-id g-color-picker-css-var"
        >
          <div
            class="g-color-picker-color-block"
          >
            <div
              class="g-color-picker-color-block-inner"
              style="background:rgb(22,119,255)"
            />
          </div>
        </div>
      </div>
      <div
        class="g-space-item"
      >
        <span>
          HEX: 
          <!-- -->
          #1677ff
        </span>
      </div>
    </div>
  </div>
  <div
    class="g-space-item"
  >
    <div
      class="g-space g-space-horizontal g-space-align-center g-space-gap-row-small g-space-gap-col-small css-var-test-id"
    >
      <div
        class="g-space-item"
      >
        <div
          class="g-color-picker-trigger css-var-test-id g-color-picker-css-var"
        >
          <div
            class="g-color-picker-color-block"
          >
            <div
              class="g-color-picker-color-block-inner"
              style="background:rgb(23,120,255)"
            />
          </div>
        </div>
      </div>
      <div
        class="g-space-item"
      >
        <span>
          HSB: 
          <!-- -->
          hsb(215, 91%, 100%)
        </span>
      </div>
    </div>
  </div>
  <div
    class="g-space-item"
  >
    <div
      class="g-space g-space-horizontal g-space-align-center g-space-gap-row-small g-space-gap-col-small css-var-test-id"
    >
      <div
        class="g-space-item"
      >
        <div
          class="g-color-picker-trigger css-var-test-id g-color-picker-css-var"
        >
          <div
            class="g-color-picker-color-block"
          >
            <div
              class="g-color-picker-color-block-inner"
              style="background:rgb(22,119,255)"
            />
          </div>
        </div>
      </div>
      <div
        class="g-space-item"
      >
        <span>
          RGB: 
          <!-- -->
          rgb(22, 119, 255)
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/color-picker/demo/line-gradient.tsx correctly 1`] = `
<div
  class="g-space g-space-vertical g-space-gap-row-small g-space-gap-col-small css-var-test-id"
>
  <div
    class="g-space-item"
  >
    <div
      class="g-color-picker-trigger css-var-test-id g-color-picker-css-var"
    >
      <div
        class="g-color-picker-color-block"
      >
        <div
          class="g-color-picker-color-block-inner"
          style="background:linear-gradient(90deg, rgb(16,142,233) 0%, rgb(135,208,104) 100%)"
        />
      </div>
      <div
        class="g-color-picker-trigger-text"
      >
        <span
          class="g-color-picker-trigger-text-cell"
        >
          rgb(16,142,233)
          <!-- -->
          <!-- -->
          0
          <!-- -->
          %
        </span>
        <span
          class="g-color-picker-trigger-text-cell"
        >
          rgb(135,208,104)
          <!-- -->
          <!-- -->
          100
          <!-- -->
          %
        </span>
      </div>
    </div>
  </div>
  <div
    class="g-space-item"
  >
    <div
      class="g-color-picker-trigger css-var-test-id g-color-picker-css-var"
    >
      <div
        class="g-color-picker-color-block"
      >
        <div
          class="g-color-picker-color-block-inner"
          style="background:linear-gradient(90deg, rgb(16,142,233) 0%, rgb(135,208,104) 100%)"
        />
      </div>
      <div
        class="g-color-picker-trigger-text"
      >
        <span
          class="g-color-picker-trigger-text-cell"
        >
          rgb(16,142,233)
          <!-- -->
          <!-- -->
          0
          <!-- -->
          %
        </span>
        <span
          class="g-color-picker-trigger-text-cell"
        >
          rgb(135,208,104)
          <!-- -->
          <!-- -->
          100
          <!-- -->
          %
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/color-picker/demo/panel-render.tsx correctly 1`] = `
<div
  class="g-space g-space-vertical g-space-gap-row-small g-space-gap-col-small css-var-test-id"
>
  <div
    class="g-space-item"
  >
    <div
      class="g-space g-space-horizontal g-space-align-center g-space-gap-row-small g-space-gap-col-small css-var-test-id"
    >
      <div
        class="g-space-item"
      >
        <span>
          Add title:
        </span>
      </div>
      <div
        class="g-space-item"
      >
        <div
          class="g-color-picker-trigger css-var-test-id g-color-picker-css-var"
        >
          <div
            class="g-color-picker-color-block"
          >
            <div
              class="g-color-picker-color-block-inner"
              style="background:rgb(22,119,255)"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-space-item"
  >
    <div
      class="g-space g-space-horizontal g-space-align-center g-space-gap-row-small g-space-gap-col-small css-var-test-id"
    >
      <div
        class="g-space-item"
      >
        <span>
          Horizontal layout:
        </span>
      </div>
      <div
        class="g-space-item"
      >
        <div
          class="g-color-picker-trigger css-var-test-id g-color-picker-css-var"
        >
          <div
            class="g-color-picker-color-block"
          >
            <div
              class="g-color-picker-color-block-inner"
              style="background:rgb(22,119,255)"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/color-picker/demo/presets.tsx correctly 1`] = `
<div
  class="g-color-picker-trigger css-var-test-id g-color-picker-css-var"
>
  <div
    class="g-color-picker-color-block"
  >
    <div
      class="g-color-picker-color-block-inner"
      style="background:rgb(22,119,255)"
    />
  </div>
</div>
`;

exports[`renders components/color-picker/demo/pure-panel.tsx correctly 1`] = `
<div
  style="padding-inline-start:100px"
>
  <div
    style="padding-bottom:0;position:relative;min-width:0"
  >
    <div
      class="g-color-picker-trigger css-var-test-id g-color-picker-css-var"
      style="margin:0"
    >
      <div
        class="g-color-picker-color-block"
      >
        <div
          class="g-color-picker-color-block-inner"
          style="background:rgb(22,119,255)"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/color-picker/demo/size.tsx correctly 1`] = `
<div
  class="g-space g-space-horizontal g-space-align-center g-space-gap-row-small g-space-gap-col-small css-var-test-id"
>
  <div
    class="g-space-item"
  >
    <div
      class="g-space g-space-vertical g-space-gap-row-small g-space-gap-col-small css-var-test-id"
    >
      <div
        class="g-space-item"
      >
        <div
          class="g-color-picker-trigger g-color-picker-sm css-var-test-id g-color-picker-css-var"
        >
          <div
            class="g-color-picker-color-block"
          >
            <div
              class="g-color-picker-color-block-inner"
              style="background:rgb(22,119,255)"
            />
          </div>
        </div>
      </div>
      <div
        class="g-space-item"
      >
        <div
          class="g-color-picker-trigger css-var-test-id g-color-picker-css-var"
        >
          <div
            class="g-color-picker-color-block"
          >
            <div
              class="g-color-picker-color-block-inner"
              style="background:rgb(22,119,255)"
            />
          </div>
        </div>
      </div>
      <div
        class="g-space-item"
      >
        <div
          class="g-color-picker-trigger g-color-picker-lg css-var-test-id g-color-picker-css-var"
        >
          <div
            class="g-color-picker-color-block"
          >
            <div
              class="g-color-picker-color-block-inner"
              style="background:rgb(22,119,255)"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-space-item"
  >
    <div
      class="g-space g-space-vertical g-space-gap-row-small g-space-gap-col-small css-var-test-id"
    >
      <div
        class="g-space-item"
      >
        <div
          class="g-color-picker-trigger g-color-picker-sm css-var-test-id g-color-picker-css-var"
        >
          <div
            class="g-color-picker-color-block"
          >
            <div
              class="g-color-picker-color-block-inner"
              style="background:rgb(22,119,255)"
            />
          </div>
          <div
            class="g-color-picker-trigger-text"
          >
            #1677FF
          </div>
        </div>
      </div>
      <div
        class="g-space-item"
      >
        <div
          class="g-color-picker-trigger css-var-test-id g-color-picker-css-var"
        >
          <div
            class="g-color-picker-color-block"
          >
            <div
              class="g-color-picker-color-block-inner"
              style="background:rgb(22,119,255)"
            />
          </div>
          <div
            class="g-color-picker-trigger-text"
          >
            #1677FF
          </div>
        </div>
      </div>
      <div
        class="g-space-item"
      >
        <div
          class="g-color-picker-trigger g-color-picker-lg css-var-test-id g-color-picker-css-var"
        >
          <div
            class="g-color-picker-color-block"
          >
            <div
              class="g-color-picker-color-block-inner"
              style="background:rgb(22,119,255)"
            />
          </div>
          <div
            class="g-color-picker-trigger-text"
          >
            #1677FF
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/color-picker/demo/style-class.tsx correctly 1`] = `
<div
  class="g-space g-space-horizontal g-space-align-center css-var-test-id"
  style="flex-wrap:wrap;column-gap:8px;row-gap:16px"
>
  <div
    class="g-space-item"
  >
    <div
      class="g-flex css-var-test-id g-flex-gap-small"
    >
      <div
        class="g-color-picker-trigger css-var-test-id g-color-picker-css-var acss-pbemrr"
      >
        <div
          class="g-color-picker-color-block"
        >
          <div
            class="g-color-picker-color-block-inner"
            style="background:rgb(22,119,255)"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="g-space-item"
  >
    <div
      class="g-flex css-var-test-id g-flex-gap-small"
    >
      <div
        class="g-color-picker-trigger g-color-picker-lg css-var-test-id g-color-picker-css-var acss-pbemrr"
      >
        <div
          class="g-color-picker-color-block"
        >
          <div
            class="g-color-picker-color-block-inner"
            style="background:rgb(114,46,209)"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/color-picker/demo/text-render.tsx correctly 1`] = `
<div
  class="g-space g-space-vertical g-space-gap-row-small g-space-gap-col-small css-var-test-id"
>
  <div
    class="g-space-item"
  >
    <div
      class="g-color-picker-trigger css-var-test-id g-color-picker-css-var"
    >
      <div
        class="g-color-picker-color-block"
      >
        <div
          class="g-color-picker-color-block-inner"
          style="background:rgb(22,119,255)"
        />
      </div>
      <div
        class="g-color-picker-trigger-text"
      >
        #1677FF
      </div>
    </div>
  </div>
  <div
    class="g-space-item"
  >
    <div
      class="g-color-picker-trigger css-var-test-id g-color-picker-css-var"
    >
      <div
        class="g-color-picker-color-block"
      >
        <div
          class="g-color-picker-color-block-inner"
          style="background:rgb(22,119,255)"
        />
      </div>
      <div
        class="g-color-picker-trigger-text"
      >
        <span>
          Custom Text (
          <!-- -->
          #1677ff
          <!-- -->
          )
        </span>
      </div>
    </div>
  </div>
  <div
    class="g-space-item"
  >
    <div
      class="g-color-picker-trigger css-var-test-id g-color-picker-css-var"
    >
      <div
        class="g-color-picker-color-block"
      >
        <div
          class="g-color-picker-color-block-inner"
          style="background:rgb(22,119,255)"
        />
      </div>
      <div
        class="g-color-picker-trigger-text"
      >
        <span
          aria-label="down"
          class="gicon gicon-down"
          role="img"
          style="color:rgba(0, 0, 0, 0.25)"
        >
          <svg
            aria-hidden="true"
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/color-picker/demo/trigger.tsx correctly 1`] = `
<button
  class="g-btn css-var-test-id g-btn-primary g-btn-color-primary g-btn-varig-solid"
  style="background-color:#1677ff"
  type="button"
>
  <span>
    open
  </span>
</button>
`;

exports[`renders components/color-picker/demo/trigger-event.tsx correctly 1`] = `
<div
  class="g-color-picker-trigger css-var-test-id g-color-picker-css-var"
>
  <div
    class="g-color-picker-color-block"
  >
    <div
      class="g-color-picker-color-block-inner"
      style="background:rgb(22,119,255)"
    />
  </div>
</div>
`;
